# color-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
color_agent/: __init__.py  _colornames.csv  agent.py  agent_cache.py  cli.py  color_pizza.py  consistency.py  css_colors.py  distance.py  eval.py  normalize.py  prompts.py  reflect.py  router.py  tier1.py  tier23.py  tier_local.py  types.py
evals/: dataset.json  run_eval.py
tests/: conftest.py  test_agent_cache.py  test_agent_mocked.py  test_cli.py  test_color_pizza_mocked.py  test_consistency_mocked.py  test_css_colors.py  test_distance.py  test_eval_metrics.py  test_live.py  test_normalize.py  test_reflect_mocked.py  test_router_mocked.py  test_tier_local.py
